# vscode-dev-container-imgproc-wasm

./: .gitignore  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: push-image.yml
devcontainer-imgproc-wasm/: Dockerfile
sample/meet-segmentation/: package.json
sample/meet-segmentation/public/: index.html
sample/meet-segmentation/public/wasm/: wasm-cmake.js  wasm.js  wasm.wasm
sample/meet-segmentation/src/: App.tsx
sample/meet-segmentation/wasm/: .bazelrc  BUILD  CMakeLists.txt  WORKSPACE  opencv.BUILD  opencv_simd.BUILD  opencv_simd_thread.BUILD  wasm.cc
sample/simple/public/: index.html
sample/simple/public/wasm/: simple-wasm.js  simple-wasm.wasm
sample/simple/src/: App.tsx
sample/simple/wasm/: BUILD  WORKSPACE  spdlog.BUILD  wasm.cc
